Added jacoco and surefire plugin for code coverage.